✔ 完成右键菜单汉化
-[x] 完成右键菜单汉化
-[ ] 开始系统软件汉化

--- a/public/locales/en/translate.json
+++ b/public/locales/en/translate.json
@@ -1,27 +1,27 @@
 {
-  "about.opensource": "win11React is an open source project made in the hope to replicate the Windows 11 desktop experience on web, using standard web technologies like React, CSS, and JavaScript.",
-  "about.notmicrosoft": "This project is not in anyway affiliated with Microsoft and should not be confused with Microsoft's Operating System or Products.",
-  "about.Creative-Commons": "Creative-Commons",
-  "about.title": "About",
-  "about.licensed": "This project is licensed under",
-  "about.alsonot": "This is also not",
-  "about.microsoftcopywrite": "Microsoft, Windows and Other demonstrated Products in this project are trademarks of the Microsoft group of companies",
-  "about.understand": "Ok, I understand",
-  "about.contact": "contact",
-  "store.featured-app": "Featured Apps",
-  "store.featured-app.info": "Take your experience to new heights with these must-have apps",
-  "store.featured-game": "Featured Games",
-  "store.featured-game.info": "Explore fun to play xbox games and find a new favorite",
-  "store.featured-film": "Featured Films",
-  "store.featured-film.info": "Rent or buy the latest hit films and watch them at home or on the go",
-  "store.free": "FREE",
-  "store.owned": "Owned",
-  "store.rent": "Rent",
-  "store.features": "Features",
-  "store.ratings": "Ratings and reviews",
-  "store.description": "Description",
-  "camera.take-photo": "Take photo",
-  "oobe.country": "Is this the right country or region?",
-  "oobe.keyboard": "Is this the right keyboard layout or input method?",
-  "oobe.anotherkeyboard": "If you also use another keyboard layout, you can add that next"
+  "about.opensource": "win11React 是一个开源项目，旨在使用 React、CSS 和 JavaScript 等标准 Web 技术在 Web 上复制 Windows 11 桌面体验",
+  "about.notmicrosoft": "此项目绝不附属于微软，且不应与微软操作系统或产品混淆。",
+  "about.Creative-Commons": "知识共享",
+  "about.title": "关于",
+  "about.licensed": "此项目已授权使用",
+  "about.alsonot": "这也不是",
+  "about.microsoftcopywrite": "本项目中微软、Windows和其他示范产品是微软公司组的商标。",
+  "about.understand": "好的，我明白了",
+  "about.contact": "联系",
+  "store.featured-app": "精选应用",
+  "store.featured-app.info": "使用这些必备应用程序将您的体验提升到新的高度",
+  "store.featured-game": "特色游戏",
+  "store.featured-game.info": "探索乐趣来玩xbox 游戏并找到一个新收藏",
+  "store.featured-film": "精选电影",
+  "store.featured-film.info": "租借或购买最新的热门电影，在家中或旅途中观看",
+  "store.free": "免费的",
+  "store.owned": "拥有的",
+  "store.rent": "租金",
+  "store.features": "功能",
+  "store.ratings": "评级和评论",
+  "store.description": "描述",
+  "camera.take-photo": "拍照",
+  "oobe.country": "这是正确的国家或地区吗？",
+  "oobe.keyboard": "这是正确的键盘布局或输入法吗？",
+  "oobe.anotherkeyboard": "如果您还有使用其他的键盘布局，您可以添加下一个"
 }
